--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tai32max-config",
+  "name": "tai-array-generator",
   "version": "1.0.0",
   "description": "A collection of utilities for working with Stellar blockchain.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tai32max/tai32max32-config"
+    "url": "https://github.com/tai32max/tai-array-generator"
   },
   "dependencies": {
 	"sqr-trumposwere": "1.0.0",
@@ -24,7 +24,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tai32max/tai32max-config/issues"
+    "url": "https://github.com/tai32max/tai-array-generator/issues"
   },
-  "homepage": "https://github.com/tai32max/tai32max-config#readme"
+  "homepage": "https://github.com/tai32max/tai-array-generator#readme"
 }
